--- a/.github/workflows/update.yaml
+++ b/.github/workflows/update.yaml
@@ -27,8 +27,9 @@ jobs:
 
       - name: Generate Readme File
         run: node index.js
-        
+
       - name: Commit and push new readme to repo
         uses: mikeal/publish-to-github-action@master
         env: 
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          BRANCH_NAME: main
