--- a/.github/workflows/update.yaml
+++ b/.github/workflows/update.yaml
@@ -29,7 +29,7 @@ jobs:
         run: node index.js
 
       - name: Commit and push new readme to repo
-        uses: mikeal/publish-to-github-action@master
+        uses: mikeal/publish-to-github-action@main
         env: 
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           BRANCH_NAME: main
