--- a/.github/workflows/update.yaml
+++ b/.github/workflows/update.yaml
@@ -32,4 +32,4 @@ jobs:
         uses: mikeal/publish-to-github-action@main
         env: 
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          BRANCH_NAME: main
+          BRANCH_NAME: 'main'
