--- a/.github/workflows/update.yaml
+++ b/.github/workflows/update.yaml
@@ -29,7 +29,7 @@ jobs:
         run: node index.js
 
       - name: Commit and push new readme to repo
-        uses: mikeal/publish-to-github-action@main
+        uses: mikeal/publish-to-github-action@master
         env: 
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.TOKEN }}
           BRANCH_NAME: 'main'
